# 5-card-poker

./: .gitignore  README.md  design_doc.md  pyproject.toml
.squad/: project.json
.squad/architect/: design_doc.md
.squad/architect/.gemini/: GEMINI.md
.squad/devops/.gemini/: GEMINI.md
.squad/grunt/.gemini/: GEMINI.md
.squad/sentinel/.gemini/: GEMINI.md
.squad/sentinel/tests/: conftest.py  test_ai_validation.py  test_app.py  test_async_perf.py  test_server_perf.py
.squad/uat/.gemini/: GEMINI.md
src/five_card_poker/: ai.py  chat.py  logic.py  main.py  models.py
src/five_card_poker/static/: script.js  style.css
src/five_card_poker/templates/: index.html
tests/: conftest.py  test_ai_chat.py  test_ai_player.py  test_ai_validation.py  test_chat.py  test_features.py  test_fix.py  test_game_flow.py  test_multiplayer.py  test_poker.py  test_server_perf.py
