[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "5-card-poker"
version = "0.1.0"
description = "A 5 card poker web app with a darkmode and advanced javascript features"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Chuck Forsyth", email = "forsythc@ucr.edu" },
]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/five_card_poker"]
