[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "5-card-poker"
version = "0.3.1"
description = "A 5 card poker web app with a darkmode and advanced javascript features"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Chuck Forsyth", email = "forsythc@ucr.edu" },
]
dependencies = [
    "fastapi>=0.128.8",
    "jinja2>=3.1.6",
    "uvicorn>=0.39.0",
    "google-generativeai>=0.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/five_card_poker"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=8.4.2",
]
